--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<compiler.version>1.8</compiler.version>
 		<hadoop.version>2.6.0</hadoop.version>
+		<jline.version>2.14.1</jline.version>
+		<derby.version>10.12.1.1</derby.version>
 	</properties>
 
 	<dependencies>
@@ -36,6 +38,19 @@
 			<artifactId>hadoop-client</artifactId>
 			<version>${hadoop.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>jline</groupId>
+			<artifactId>jline</artifactId>
+			<version>${jline.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.derby</groupId>
+			<artifactId>derby</artifactId>
+			<version>${derby.version}</version>
+		</dependency>
+		
 		
 	</dependencies>
 	
