--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
 			<version>${hadoop.version}</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.apache.derby</groupId>
+			<artifactId>derby</artifactId>
+			<version>10.12.1.1</version>
+		</dependency>
+		
 	</dependencies>
 	
 	<build>
