add dependency for antlr

--- a/pom.xml
+++ b/pom.xml
@@ -19,67 +19,98 @@
 	</properties>
 
 	<dependencies>
-	
+
 		<dependency>
 			<groupId>cn.edu.thu</groupId>
 			<artifactId>tsfile</artifactId>
 			<version>0.1.0</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-client</artifactId>
 			<version>${hadoop.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>jline</groupId>
 			<artifactId>jline</artifactId>
 			<version>${jline.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.derby</groupId>
 			<artifactId>derby</artifactId>
 			<version>${derby.version}</version>
 		</dependency>
+	<dependency>
+			<groupId>org.antlr</groupId>
+			<artifactId>antlr3-maven-plugin</artifactId>
+			<version>3.4</version>
+		</dependency> 
+		
+	<!-- 	 <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>antlr4-runtime</artifactId>
+            <version>4.5.3</version>
+        </dependency> -->
 	</dependencies>
-	
+
 	<build>
 		<plugins>
 			<plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.3</version>
-                    <configuration>
-                        <source>${compiler.version}</source>
-                        <target>${compiler.version}</target>
-                        <encoding>UTF-8</encoding>
-                    </configuration>
-                	<!-- compile java files in src/it/java -->
-					<executions>
-						<execution>
-							<id>compile-integration-test</id>
-							<phase>pre-integration-test</phase>
-							<goals>
-								<goal>testCompile</goal>
-							</goals>
-							<configuration>
-								<testIncludes>
-									<testInclude>**/*.java</testInclude>
-								</testIncludes>
-								<outputDirectory>${project.build.directory}/it-classes</outputDirectory>
-							</configuration>
-						</execution>
-					</executions>                	                    
-                </plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.3</version>
+				<configuration>
+					<source>${compiler.version}</source>
+					<target>${compiler.version}</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
+				<!-- compile java files in src/it/java -->
+				<executions>
+					<execution>
+						<id>compile-integration-test</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>testCompile</goal>
+						</goals>
+						<configuration>
+							<testIncludes>
+								<testInclude>**/*.java</testInclude>
+							</testIncludes>
+							<outputDirectory>${project.build.directory}/it-classes</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			
+			<!-- <plugin>
+                <groupId>org.antlr</groupId>
+                <artifactId>antlr4-maven-plugin</artifactId>
+                <version>4.3</version>
+                <executions>
+                    <execution>
+                        <id>antlr</id>
+                        <goals>
+                            <goal>antlr4</goal>
+                        </goals>
+                        <phase>none</phase>
+                    </execution>
+                </executions>
+                <configuration>
+                    <outputDirectory></outputDirectory>
+                    <listener>true</listener>
+                    <treatWarningsAsErrors>true</treatWarningsAsErrors>
+                </configuration>
+            </plugin> -->
 		</plugins>
 	</build>
 </project>
