--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
 		<common.cli.version>1.3.1</common.cli.version>
 		<antlr3.version>3.4</antlr3.version>
 		<joda.version>2.9.9</joda.version>
+		<jline.version>2.14.1</jline.version>
+
 	</properties>
 
 	<dependencies>
@@ -60,7 +62,11 @@
 			<version>${joda.version}</version>
 		</dependency>
 
-
+		<dependency>
+			<groupId>jline</groupId>
+			<artifactId>jline</artifactId>
+			<version>${jline.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
