--- a/tsfiledb/conf/tsfile-engine.properties
+++ b/tsfiledb/conf/tsfile-engine.properties
@@ -40,11 +40,11 @@ buffer_write_dir=data/delta
 
 # Data directory of metadata data
 # If this value starts with "/", use absolute path. Otherwise, it will save the data in the relative path directory under the TsFileDB folder
-metadata_dir=metadata
+metadata_dir=data/metadata
 
 # Data directory of derby data
 # If this value starts with "/", use absolute path. Otherwise, it will save the data in the relative path directory under the TsFileDB folder
-derby_dir=derby
+derby_dir=data/derby
 
 # The maximum concurrent thread number for merging overflow
 # Increase this value, it will increase IO and CPU consumption
