--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 		<common.cli.version>1.3.1</common.cli.version>
 		<antlr3.version>3.4</antlr3.version>
 		<joda.version>2.9.9</joda.version>
-		<jline.version>2.14.1</jline.version>
+		<jline.version>3.3.0</jline.version>
 
 	</properties>
 
@@ -63,7 +63,7 @@
 		</dependency>
 
 		<dependency>
-			<groupId>jline</groupId>
+			<groupId>org.jline</groupId>
 			<artifactId>jline</artifactId>
 			<version>${jline.version}</version>
 		</dependency>
