all data file dir changed to one file dir

--- a/tsfiledb/conf/tsfile-engine.properties
+++ b/tsfiledb/conf/tsfile-engine.properties
@@ -8,10 +8,6 @@ rpc_port=6667
 # is write ahead log enable
 enable_wal=true
 
-# Write ahead log storage folder
-# If this value starts with "/", use absolute path. Otherwise, it will save the data in the relative path directory under the TsFileDB folder
-wal_folder=wals
-
 # When the total number of write ahead log in the file and memory reaches the specified size, all the logs are compressed and the unused logs are removed
 # Increase this value, it will lead to short write pause. Decrease this value, it will increase IO and CPU consumption
 wal_cleanup_threshold=500000
@@ -26,25 +22,9 @@ flush_wal_period_in_ms=10
 
 # database features configuration
 
-# Data directory of overflow data
+# data dir
 # If this value starts with "/", use absolute path. Otherwise, it will save the data in the relative path directory under the TsFileDB folder
-overflow_data_dir=data/overflow
-
-# Data directory of FileNode data
-# If this value starts with "/", use absolute path. Otherwise, it will save the data in the relative path directory under the TsFileDB folder
-file_node_dir=data/digest
-
-# Data directory of bufferWrite data
-# If this value starts with "/", use absolute path. Otherwise, it will save the data in the relative path directory under the TsFileDB folder
-buffer_write_dir=data/delta
-
-# Data directory of metadata data
-# If this value starts with "/", use absolute path. Otherwise, it will save the data in the relative path directory under the TsFileDB folder
-metadata_dir=data/metadata
-
-# Data directory of derby data
-# If this value starts with "/", use absolute path. Otherwise, it will save the data in the relative path directory under the TsFileDB folder
-derby_dir=data/derby
+data_dir=data
 
 # The maximum concurrent thread number for merging overflow
 # Increase this value, it will increase IO and CPU consumption
