add multi date format and time zone config

--- a/tsfiledb/conf/tsfile-engine.properties
+++ b/tsfiledb/conf/tsfile-engine.properties
@@ -47,3 +47,9 @@ period_time_for_close_in_second=3600
 # The period time for merge overflow data with tsfile data.
 # The unit is second.
 period_time_for_merge_in_second=7200
+
+
+# time zone of server side
+# default value is +08:00
+# eg. +08:00, -01:00
+time_zone=+01:00
