Use antlr3-maven-plugin to generate lexer/parser automatically
Use maven-thrift-plugin to generate thrift classes automatically

Specify the classes generated by antlr

Revert "Use maven-thrift-plugin to generate thrift classes automatically"

This reverts commit db743e601386d56ac6a30e54adf935a2b023a45b.

--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,18 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.antlr</groupId>
+				<artifactId>antlr3-maven-plugin</artifactId>
+				<version>${antlr3.version}</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>antlr</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 </project>
