--- a/iotdb/conf/iotdb-engine.properties
+++ b/iotdb/conf/iotdb-engine.properties
@@ -41,9 +41,9 @@ max_opened_folder=100
 # The amount of data that is read every time when IoTDB merge data.
 fetch_size=10000
 
-# The period time for close file. 
+# The period time of flushing data from memory to file. 
 # The unit is second.
-period_time_for_close_in_second=3600
+period_time_for_flush_in_second=3600
 # The period time for merge overflow data with tsfile data.
 # The unit is second.
 period_time_for_merge_in_second=7200
