--- a/pom.xml
+++ b/pom.xml
@@ -16,32 +16,26 @@
 		<derby.version>10.12.1.1</derby.version>
 		<common.cli.version>1.3.1</common.cli.version>
 		<antlr3.version>3.5.2</antlr3.version>
-		<joda.version>2.9.9</joda.version>
 		<jline.version>2.14.5</jline.version>
 	</properties>
 
 	<dependencies>
-
 		<dependency>
 			<groupId>cn.edu.tsinghua</groupId>
-			<artifactId>tsfile</artifactId>
-			<version>0.1.0</version>
+			<artifactId>iotdb-jdbc</artifactId>
+			<version>0.1.1</version>
 		</dependency>
-
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
 		<dependency>
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
 			<version>${common.cli.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.apache.derby</groupId>
 			<artifactId>derby</artifactId>
@@ -52,21 +46,11 @@
 			<artifactId>antlr3-maven-plugin</artifactId>
 			<version>${antlr3.version}</version>
 		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/joda-time/joda-time -->
-		<dependency>
-			<groupId>joda-time</groupId>
-			<artifactId>joda-time</artifactId>
-			<version>${joda.version}</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/jline/jline -->
 		<dependency>
 			<groupId>jline</groupId>
 			<artifactId>jline</artifactId>
 			<version>${jline.version}</version>
 		</dependency>
-		
 	</dependencies>
 
 	<build>
