change tsfiledb to iotdb in script (#143)
change tsfiledb to iotdb in script

--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,9 @@
 						</goals>
 						<configuration>
 							<outputDirectory>${project.basedir}/iotdb/lib</outputDirectory>
+							<overWriteIfNewer>true</overWriteIfNewer>
+							<overWriteReleases>true</overWriteReleases>
+							<overWriteSnapshots>true</overWriteSnapshots>
 						</configuration>
 					</execution>
 				</executions>
