--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
 			<version>0.3.1</version>
 		</dependency>
 		<dependency>
+			<groupId>cn.edu.fudan.dsm</groupId>
+			<artifactId>kvmatch-iotdb</artifactId>
+			<version>1.0.3</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
