--- a/iotdb/conf/iotdb-engine.properties
+++ b/iotdb/conf/iotdb-engine.properties
@@ -34,6 +34,19 @@ flush_wal_period_in_ms=10
 # If its prefix is "/", then the path is absolute. Otherwise, it is relative.
 # data_dir=/path/iotdb/data/data
 
+# tsfile dir
+# For this property, multiple directories should be set, and all directories should be separated by ",". All TsFiles will be allocated separately in all these directories. Moreover, setting absolute directories is suggested.
+# If this property is unset, system will save the TsFiles in the default relative path directory under the data_dir folder(i.e., %IOTDB_HOME%/data/data/settled).
+# If some are absolute, system will save the data in exact location they point to.
+# If some are relative, system will save the data in the relative path directory they indicate under the data_dir folder.
+# Note: If some are assigned an empty string(i.e.,zero-length), they will be handled as a relative path.
+# For windows platform
+# If its prefix is a drive specifier followed by "\\", or if its prefix is "\\\\", then the path is absolute. Otherwise, it is relative.
+# tsfile_dir=D:\\iotdb\\data\\data,data\\data
+# For Linux platform
+# If its prefix is "/", then the path is absolute. Otherwise, it is relative.
+# tsfile_dir=/path/iotdb/data/data,data/data
+
 # system dir
 # If this property is unset, system will save the data in the default relative path directory under the IoTDB folder(i.e., %IOTDB_HOME%/data/system).
 # If it is absolute, system will save the data in exact location it points to.
