--- a/iotdb/conf/iotdb-engine.properties
+++ b/iotdb/conf/iotdb-engine.properties
@@ -185,3 +185,21 @@ schema_manager_cache_size = 300000
 # If the size in byte of a WAL log exceeds this, it won't be written.
 # Generally the default value 4MB is enough.
 max_log_entry_size=4194304
+
+# IoTDB postBack server properties
+# Whether to allow to post back, the default allowed
+is_postback_enable = true
+
+# PostBack server port address
+postback_server_port = 5555
+
+# White IP list of Postback client.
+# Please use the form of network segment to present the range of IP, for example: 192.168.0.0/16
+# If there are more than one IP segment, please separate them by commas
+# The default is to allow all IP to postback
+IP_white_list = 0.0.0.0/0
+
+# Choose a postBack strategy of merging historical data: 
+#1. It's more likely to update historical data, please choose "true".
+#2. It's more likely not to update historical data or you don't know exactly, please choose "false".
+update_historical_data_possibility = false
