--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
 		<common.cli.version>1.3.1</common.cli.version>
 		<antlr3.version>3.5.2</antlr3.version>
 		<jline.version>2.14.5</jline.version>
+		<it.test.includes>**/*Test.java</it.test.includes>
+		<it.test.excludes>**/NoTest.java</it.test.excludes>
 	</properties>
 
 	<dependencies>
@@ -188,6 +190,42 @@
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+			    <groupId>org.codehaus.mojo</groupId>
+			    <artifactId>cobertura-maven-plugin</artifactId>
+			    <version>2.7</version>
+			    <configuration>
+			        <quiet>true</quiet>
+			        <formats>
+			            <format>xml</format>
+			        </formats>
+			        <instrumentation>
+			            <ignoreTrivial>true</ignoreTrivial>
+			        </instrumentation>
+			    </configuration>
+			    <executions>
+			        <execution>
+			            <phase>package</phase>
+			                <goals>
+			                    <goal>cobertura</goal>
+			                </goals>
+			        </execution>
+			    </executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.9</version>
+				<configuration>
+					<excludes>
+						<exclude>${it.test.excludes}</exclude>
+					</excludes>
+					<includes>
+						<include>${it.test.includes}</include>
+					</includes>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
