--- a/pom.xml
+++ b/pom.xml
@@ -121,8 +121,8 @@
 		<logback.version>1.1.3</logback.version>
 		<json.version>20140107</json.version>
 		<joda.version>2.9.9</joda.version>
-		<skip.ut>false</skip.ut>
-		<skip.it>false</skip.it>
+                <!-- <skip.ut>false</skip.ut>
+		<skip.it>false</skip.it> -->
 		<spark.version>2.0.1</spark.version>
 		<json.version>20140107</json.version>
 		<libthrift.version>0.9.1</libthrift.version>
@@ -232,7 +232,7 @@
 				<executions>
 					<execution>
 						<id>check</id>
-						<phase>test</phase>
+						<!-- <phase>test</phase> -->
 						<goals>
 							<goal>cobertura</goal>
 						</goals>
