--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
 	<scm>
 		<connection>scm:git:git://github.com/thulab/iotdb.git</connection>
 		<developerConnection>scm:git:ssh://github.com:thulab/iotdb.git</developerConnection>
-		<url>http://github.com/thulab/iotdb/tree/master</url>
+		<url>http://github.com/thulab/iotdb/</url>
 		<tag>v0.8.0</tag>
 	</scm>
 
@@ -135,6 +135,7 @@
 		<module>jdbc</module>
 		<module>iotdb</module>
 		<module>grafana</module>
+		<module>service-rpc</module>
 		<!-- <module>hadoop</module> -->
 		<!-- <module>spark</module> -->
 	</modules>
