--- a/pom.xml
+++ b/pom.xml
@@ -61,14 +61,22 @@
         <common.io.version>2.5</common.io.version>
         <commons.collections4>4.0</commons.collections4>
         <thrift.version>0.9.3</thrift.version>
+        <!-- URL of the ASF SonarQube server -->
+        <sonar.host.url>https://builds.apache.org/analysis</sonar.host.url>
+        <!-- Exclude all generated code -->
+        <sonar.exclusions>**/generated-sources</sonar.exclusions>
     </properties>
-    <!-- if we claim dependencies in dependencyManagement, then we do not claim
-  their version in sub-project's pom, but we have to claim themselves again
-  in sub-projects -->
+    <!--
+        if we claim dependencies in dependencyManagement, then we do not claim
+        their version in sub-project's pom, but we have to claim themselves again
+        in sub-projects
+    -->
     <dependencyManagement>
         <dependencies>
-            <!-- in the subprojects, you have to claim logback again, because maybe
-  someone in your dependences uses log4j lib. -->
+            <!--
+                in the subprojects, you have to claim logback again, because maybe
+                someone in your dependences uses log4j lib.
+            -->
             <dependency>
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
@@ -139,18 +147,18 @@
                     <configuration>
                         <excludePackageNames>*thrift*</excludePackageNames>
                         <!--
-              This will suppress the generation of a hidden timestamp at the top of each generated html page
-              and hopefully let the site generation nod to too big updates every time.
-            -->
+                          This will suppress the generation of a hidden timestamp at the top of each generated html page
+                          and hopefully let the site generation nod to too big updates every time.
+                        -->
                         <notimestamp>true</notimestamp>
                         <!--Don't fail the build, just because there were issues in the JavaDoc generation.-->
                         <failOnError>false</failOnError>
                     </configuration>
                 </plugin>
                 <!--
-  We need to increase the memory available to tests as we were
-  getting out-of-memory errors when building on windows machines.
--->
+                  We need to increase the memory available to tests as we were
+                  getting out-of-memory errors when building on windows machines.
+                -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
@@ -158,14 +166,22 @@
                         <argLine>-Xmx512m</argLine>
                     </configuration>
                 </plugin>
+                <!--
+                    Plugin for doing the code analysis.
+                -->
+                <plugin>
+                    <groupId>org.sonarsource.scanner.maven</groupId>
+                    <artifactId>sonar-maven-plugin</artifactId>
+                    <version>3.6.0.1398</version>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
             <!--
-  Strange things usually happen if you run with a too low Java version.
-  This plugin not only checks the minimum java version of 1.8, but also
-  checks all dependencies (and transitive dependencies) for reported CVEs.
--->
+              Strange xthings usually happen if you run with a too low Java version.
+              This plugin not only checks the minimum java version of 1.8, but also
+              checks all dependencies (and transitive dependencies) for reported CVEs.
+            -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
@@ -202,14 +218,14 @@
                 </dependencies>
             </plugin>
             <!--
-  Even if Maven transitively pulls in dependencies, relying on these can
-  quite often cause hard to find problems. So it's a good practice to make
-  sure everything directly required is also directly added as a dependency.
-  On the other side adding unused dependency only over-complicates the
-  the dependency graph, so the maven-dependency-plugin checks we depend on
-  what we need and only that and that runtime dependencies are correctly
-  imported with runtime scope.
--->
+              Even if Maven transitively pulls in dependencies, relying on these can
+              quite often cause hard to find problems. So it's a good practice to make
+              sure everything directly required is also directly added as a dependency.
+              On the other side adding unused dependency only over-complicates the
+              the dependency graph, so the maven-dependency-plugin checks we depend on
+              what we need and only that and that runtime dependencies are correctly
+              imported with runtime scope.
+            -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
@@ -297,45 +313,45 @@
                 </executions>
             </plugin>
             <!--
-  Check if all files contain Apache headers in them.
-  Ignore this plugin, we use license-maven-plugin to check apache header.
--->
+              Check if all files contain Apache headers in them.
+              Ignore this plugin, we use license-maven-plugin to check apache header.
+            -->
             <!-- 			<plugin>
-  <groupId>org.apache.rat</groupId>
-  <artifactId>apache-rat-plugin</artifactId>
-  <executions>
-    <execution>
-      <id>license-check</id>
-      <phase>verify</phase>
-      <goals>
-        <goal>check</goal>
-      </goals>
-    </execution>
-  </executions>
-  <configuration>
-    Should be enabled as soon as the headers are in position
-    <skip>true</skip>
-    <excludes>
-      Git related files
-      <exclude>**/.git/**</exclude>
-      <exclude>**/.gitignore</exclude>
+              <groupId>org.apache.rat</groupId>
+              <artifactId>apache-rat-plugin</artifactId>
+              <executions>
+                <execution>
+                  <id>license-check</id>
+                  <phase>verify</phase>
+                  <goals>
+                    <goal>check</goal>
+                  </goals>
+                </execution>
+              </executions>
+              <configuration>
+                Should be enabled as soon as the headers are in position
+                <skip>true</skip>
+                <excludes>
+                  Git related files
+                  <exclude>**/.git/**</exclude>
+                  <exclude>**/.gitignore</exclude>
 
-      Maven related files
-      <exclude>**/target/**</exclude>
+                  Maven related files
+                  <exclude>**/target/**</exclude>
 
-      Eclipse related files
-      <exclude>**/.project</exclude>
-      <exclude>**/.settings/**</exclude>
-      <exclude>**/.classpath</exclude>
+                  Eclipse related files
+                  <exclude>**/.project</exclude>
+                  <exclude>**/.settings/**</exclude>
+                  <exclude>**/.classpath</exclude>
 
-      IntelliJ related files
-      <exclude>**/.idea/**</exclude>
-      <exclude>**/*.iml</exclude>
-      Runtime log
-      <exclude>**/*.log</exclude>
-    </excludes>
-  </configuration>
-</plugin> -->
+                  IntelliJ related files
+                  <exclude>**/.idea/**</exclude>
+                  <exclude>**/*.iml</exclude>
+                  Runtime log
+                  <exclude>**/*.log</exclude>
+                </excludes>
+              </configuration>
+            </plugin> -->
             <!--use `mvn cobertura:cobertura` -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -380,8 +396,8 @@
                 </executions>
             </plugin>
             <!--
-  Generate the legally required text files in the jars
--->
+              Generate the legally required text files in the jars
+            -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-remote-resources-plugin</artifactId>
@@ -408,9 +424,9 @@
     </build>
     <profiles>
         <!--
-  A set of profiles defining the different properties needed to download and run thrift
-  They are automatically activated depending on the OS you are using.
--->
+          A set of profiles defining the different properties needed to download and run thrift
+          They are automatically activated depending on the OS you are using.
+        -->
         <profile>
             <id>windows</id>
             <activation>
@@ -458,14 +474,14 @@
             </properties>
         </profile>
         <!--
-  Self activating profile, that activates itself as soon as a "src/main/thrift" directory is found.
-  The different plugins here download the thrift executable matching the current os, make that
-  executable (on mac and unix/linux) and run the code generation.
+          Self activating profile, that activates itself as soon as a "src/main/thrift" directory is found.
+          The different plugins here download the thrift executable matching the current os, make that
+          executable (on mac and unix/linux) and run the code generation.
 
-  Note to the Download: The download-maven-plugin checks if a resource is previously downloaded
-  and only downloads each file once. It caches downloaded files in:
-  {maven local repo}/.cache/download-maven-plugin
--->
+          Note to the Download: The download-maven-plugin checks if a resource is previously downloaded
+          and only downloads each file once. It caches downloaded files in:
+          {maven local repo}/.cache/download-maven-plugin
+        -->
         <profile>
             <id>thrift-generation</id>
             <activation>
