--- a/iotdb-cli/pom.xml
+++ b/iotdb-cli/pom.xml
@@ -33,7 +33,7 @@
     <properties>
         <common.cli.version>1.3.1</common.cli.version>
         <jline.version>2.14.5</jline.version>
-        <cli.test.skip>false</cli.test.skip>
+        <cli.test.skip>true</cli.test.skip>
         <cli.it.skip>${cli.test.skip}</cli.it.skip>
         <cli.ut.skip>${cli.test.skip}</cli.ut.skip>
     </properties>
