--- a/jdbc/pom.xml
+++ b/jdbc/pom.xml
@@ -70,7 +70,7 @@
                 </executions>
             </plugin>
             <!--using `mvn test` to run UT, `mvn verify` to run ITs
-            Reference: https://antoniogoncalves.org/2012/12/13/lets-turn-integration-tests-with-maven-to-a-first-class-citizen/-->
+      Reference: https://antoniogoncalves.org/2012/12/13/lets-turn-integration-tests-with-maven-to-a-first-class-citizen/-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -102,6 +102,7 @@
                 <configuration>
                     <excludes>
                         <exclude>example/data/kafka_data.csv</exclude>
+                        <exclude>**/*.iml</exclude>
                     </excludes>
                 </configuration>
             </plugin>
