--- a/.travis.yml
+++ b/.travis.yml
@@ -21,17 +21,58 @@
 # Since we don't have osx test environment, we use travis-ci to test on osx.
 # Free-plan of travis-ci offers limited resources, we only test whether iotdb can be packaged on jdk8 and jdk11.
 
-dist: trusty
-#sudo: required
-
 language: java
+
+#dist: trusty
+#sudo: required
 
 matrix:
   include:
     - os: osx
       osx_image: xcode10.1 # with JDK11.0.1+13 installed
+      name: osx-jdk11
     - os: osx
       osx_image: xcode9.3  # with JDK1.8.0_112-b16 installed
+      name: osx-jdk8
+    - os: windows
+      name: win-jdk8
+      install:
+        - choco install jdk8
+        - choco install maven
+    - os: windows
+      name: win-jdk11
+      install:
+        - choco install jdk11
+        - choco install maven
+#    - os: linux
+#      name: linux-openjdk6
+#      dist: trusty
+#      addons:
+#        apt:
+#          packages:
+#            - openjdk-6-jdk
+#      jdk: openjdk8
+    - os: linux
+      name: linux-openjdk11
+      dist: trusty
+      sudo: required
+      before_install:
+        - sudo add-apt-repository ppa:openjdk-r/ppa -y
+        - sudo apt-get update -q
+        - sudo apt-get install openjdk-11-jdk -y
+    - os: linux
+      name: linux-openjdk8
+      dist: trusty
+      jdk: openjdk8
+    - os: linux
+      name: linux-jdk8
+      dist: trusty
+      jdk: oraclejdk8
+    - os: linux
+      name: linux-jdk11
+      dist: trusty
+      jdk: oraclejdk11
+
 
 # skip `before_install` stage
 before_install: true
@@ -40,10 +81,11 @@ before_install: true
 install: true
 
 script:
-  - mvn clean package -Dmaven.test.skip=true
+  #- mvn clean package -Dmaven.test.skip=true
   # For each test, travis-ci limits its output log. So we cannot test some sub-modules like tsfile, iotdb.
   # We only test jdbc to ensure maven commands work correctly on travis-ci.
-  - mvn clean test -pl jdbc -am -Dtsfile.test.skip=true
+  #- mvn clean test -pl jdbc -am -Dtsfile.test.skip=true
+  - mvn clean integration-test
 
 after_success:
 
