--- a/.travis.yml
+++ b/.travis.yml
@@ -30,13 +30,33 @@ matrix:
   include:
     - os: osx
       osx_image: xcode10.1 # with JDK11.0.1+13 installed
-      name: osx-jdk11
+      name: osx-oraclejdk11
     - os: osx
       osx_image: xcode9.3  # with JDK1.8.0_112-b16 installed
-      name: osx-jdk8
+      name: osx-oraclejdk8
+    - os: osx
+      osx_image: xcode10.1 # with JDK11.0.1+13 installed
+      name: osx-openjdk11
+      addons:
+        homebrew:
+          taps:
+            - homebrew/cask-versions
+            - AdoptOpenJDK/openjdk
+          update: true
+          casks: adoptopenjdk-openjdk11
+    - os: osx
+      osx_image: xcode9.3  # with JDK1.8.0_112-b16 installed
+      name: osx-openjdk8
+      addons:
+        homebrew:
+          taps:
+           - homebrew/cask-versions
+           - AdoptOpenJDK/openjdk
+          update: true
+          casks: adoptopenjdk-openjdk8
     - os: windows
       language: c
-      name: win-jdk8
+      name: win-oraclejdk8
       install:
         - choco install jdk8 -params 'installdir=c:\\java8'
         - export PATH=$PATH:"/c/java8/bin"
@@ -44,9 +64,18 @@ matrix:
         - choco install maven
     - os: windows
       language: c
-      name: win-jdk11
+      name: win-oraclejdk11
       install:
         - choco install jdk11 -params 'installdir=c:\\java11'
+        - export PATH=$PATH:"/c/java11/bin"
+        - export JAVA_HOME="/c/java11"
+        - choco install maven
+    #choco does not support openjdk8. we have to install it manually
+    - os: windows
+      language: c
+      name: win-openjdk11
+      install:
+        - choco install openjdk -params 'installdir=c:\\java11'
         - export PATH=$PATH:"/c/java11/bin"
         - export JAVA_HOME="/c/java11"
         - choco install maven
@@ -83,6 +112,7 @@ script:
   # For each test, travis-ci limits its output log. So we cannot test some sub-modules like tsfile, iotdb.
   # We only test jdbc to ensure maven commands work correctly on travis-ci.
   #- mvn clean test -pl jdbc -am -Dtsfile.test.skip=true
+  - java -version
   - mvn clean integration-test
 
 after_success:
