--- a/iotdb/pom.xml
+++ b/iotdb/pom.xml
@@ -200,7 +200,7 @@
             </properties>
         </profile>
         <profile>
-            <id>skipUT_IoTDBTests</id>
+            <id>skipUT_IoTDB_Tests</id>
             <activation>
                 <property>
                     <name>skipUTs</name>
