add example module

--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,7 @@
         <module>grafana</module>
         <module>service-rpc</module>
         <module>iotdb-cli</module>
+        <module>example</module>
         <!-- <module>hadoop</module> -->
         <!-- <module>spark</module> -->
     </modules>
