replace org.json by alibaba.fastjson

--- a/tsfile/pom.xml
+++ b/tsfile/pom.xml
@@ -42,9 +42,9 @@
             <artifactId>logback-classic</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
-            <version>${json.version}</version>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.31</version>
         </dependency>
         <dependency>
             <groupId>org.xerial.snappy</groupId>
