--- a/example/rocketmq/pom.xml
+++ b/example/rocketmq/pom.xml
@@ -34,16 +34,7 @@
         <dependency>
             <groupId>org.apache.iotdb</groupId>
             <artifactId>iotdb-jdbc</artifactId>
-            <!--<exclusions>-->
-            <!--<exclusion>-->
-            <!--<groupId>io.netty</groupId>-->
-            <!--<artifactId>netty-common</artifactId>-->
-            <!--</exclusion>-->
-            <!--<exclusion>-->
-            <!--<groupId>io.netty</groupId>-->
-            <!--<artifactId>netty-buffer</artifactId>-->
-            <!--</exclusion>-->
-            <!--</exclusions>-->
+            <version>0.8.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.apache.rocketmq</groupId>
