rename postback to sync and reconstruct sync client

--- a/iotdb/iotdb/conf/iotdb-engine.properties
+++ b/iotdb/iotdb/conf/iotdb-engine.properties
@@ -211,7 +211,7 @@ postback_server_port=5555
 # White IP list of Postback client.
 # Please use the form of network segment to present the range of IP, for example: 192.168.0.0/16
 # If there are more than one IP segment, please separate them by commas
-# The default is to allow all IP to postback
+# The default is to allow all IP to sync
 IP_white_list=0.0.0.0/0
 
 # Choose a postBack strategy of merging historical data: 
