add cluster module

--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,7 @@
         <module>service-rpc</module>
         <module>iotdb-cli</module>
         <module>example</module>
+        <module>cluster</module>
         <!--<module>hadoop</module>-->
         <!--<module>spark</module>-->
     </modules>
