modify IoTDB config

--- a/iotdb/iotdb/conf/iotdb-cluster.properties
+++ b/iotdb/iotdb/conf/iotdb-cluster.properties
@@ -17,7 +17,7 @@
 # under the License.
 #
 
-nodes = 127.0.0.1:8888
+nodes = 127.0.0.1:8887,127.0.0.1:8888,127.0.0.1:8889
 
 replication = 3
 
@@ -25,13 +25,11 @@ ip = 127.0.0.1
 
 port = 8888
 
-#metadata_group_log_path = /tmp/metadata/log/
+#raft_log_path = /tmp/raft/log/
 
-#metadata_group_snapshot_path = /tmp/metadata/snapshot/
+#raft_snapshot_path = /tmp/raft/snapshot/
 
-#data_group_log_path = /tmp/data/log/
-
-#data_group_snapshot_path = /tmp/data/snapshot/
+#raft_metadata_path = /tmp/raft/metadata/
 
 max_catch_up_log_num = 100000
 
