add some properties

--- a/iotdb/iotdb/conf/iotdb-cluster.properties
+++ b/iotdb/iotdb/conf/iotdb-cluster.properties
@@ -17,10 +17,14 @@
 # under the License.
 #
 
+# Cluster node: {ip1:port,ip2:port,...,ipn:port}
 nodes = 127.0.0.1:8888
 
+# number of data replicator
 replication = 1
 
+# Local ip. If the cluster is deployed with more than one ip,
+# the parameter should be set to the real IP address rather than 127.0.0.1.
 ip = 127.0.0.1
 
 port = 8888
@@ -31,14 +35,34 @@ port = 8888
 
 #raft_metadata_path = /tmp/raft/metadata/
 
+# When the number of the difference between leader and follower log is less than this value, it
+# is considered as 'catch-up'
 max_catch_up_log_num = 100000
 
+# Whether to enable the delayed snapshot mechanism or not
 delay_snapshot = false
 
+# Maximin allowed delay hours of snapshot
 delay_hours = 2
 
+# Count limit to redo a single task
 task_redo_count = 3
 
+# Timeout limit for a single task, the unit is milliseconds
 task_timeout_ms = 1000
 
+# number of virtual nodes
 num_of_virtula_nodes = 2
+
+# Max number of use inner rpc client
+max_num_of_inner_rpc_client = 50;
+
+# Max number of queue length to use inner rpc client, the request which exceed to this
+# number will be rejected.
+max_queue_num_of_inner_rpc_client = 50;
+
+# ReadMetadataConsistencyLevel: 1 Strong consistency, 2 Weak consistency
+read_metadata_consistency_level = 1;
+
+# ReadDataConsistencyLevel: 1 Strong consistency, 2 Weak consistency
+read_data_consistency_level = 1;
