modify startup script

--- a/iotdb/iotdb/conf/iotdb-cluster.properties
+++ b/iotdb/iotdb/conf/iotdb-cluster.properties
@@ -59,10 +59,10 @@ max_num_of_inner_rpc_client = 50;
 
 # Max number of queue length to use inner rpc client, the request which exceed to this
 # number will be rejected.
-max_queue_num_of_inner_rpc_client = 50;
+max_queue_num_of_inner_rpc_client = 50
 
 # ReadMetadataConsistencyLevel: 1 Strong consistency, 2 Weak consistency
-read_metadata_consistency_level = 1;
+read_metadata_consistency_level = 1
 
 # ReadDataConsistencyLevel: 1 Strong consistency, 2 Weak consistency
-read_data_consistency_level = 1;
+read_data_consistency_level = 1
