--- a/iotdb/iotdb/conf/iotdb-cluster.properties
+++ b/iotdb/iotdb/conf/iotdb-cluster.properties
@@ -52,7 +52,7 @@ task_redo_count = 3
 task_timeout_ms = 1000
 
 # number of virtual nodes
-num_of_virtula_nodes = 2
+num_of_virtual_nodes = 2
 
 # Max number of use inner rpc client
 max_num_of_inner_rpc_client = 50
