add metadata cluster test

--- a/cluster/pom.xml
+++ b/cluster/pom.xml
@@ -42,6 +42,12 @@
             <artifactId>iotdb</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.iotdb</groupId>
+            <artifactId>iotdb-jdbc</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
         <!-- jraft -->
         <dependency>
             <groupId>com.alipay.sofa</groupId>
