add config for raft election timeout

--- a/iotdb/iotdb/conf/iotdb-cluster.properties
+++ b/iotdb/iotdb/conf/iotdb-cluster.properties
@@ -35,6 +35,11 @@ port = 8888
 
 #raft_metadata_path = /tmp/raft/metadata/
 
+
+# A follower would become a candidate if it doesn't receive any message
+# from the leader in election_timeout_ms milliseconds
+election_timeout_ms = 1000
+
 # When the number of the difference between leader and follower log is less than this value, it
 # is considered as 'catch-up'
 max_catch_up_log_num = 100000
