add concurrent pool

--- a/iotdb/iotdb/conf/iotdb-cluster.properties
+++ b/iotdb/iotdb/conf/iotdb-cluster.properties
@@ -71,3 +71,9 @@ read_metadata_consistency_level = 1
 
 # ReadDataConsistencyLevel: 1  Strong consistency, 2  Weak consistency
 read_data_consistency_level = 1
+
+# How many thread can concurrently execute qp task. When <= 0, use CPU core number.
+concurrent_qp_task_thread=0
+
+# How many thread can concurrently apply raft task. When <= 0, use CPU core number.
+concurrent_raft_task_thread=0
