fix bugs according to comments

--- a/iotdb/iotdb/conf/iotdb-cluster.properties
+++ b/iotdb/iotdb/conf/iotdb-cluster.properties
@@ -72,8 +72,25 @@ read_metadata_consistency_level = 1
 # ReadDataConsistencyLevel: 1  Strong consistency, 2  Weak consistency
 read_data_consistency_level = 1
 
-# How many thread can concurrently execute qp task. When <= 0, use CPU core number.
-concurrent_qp_task_thread=0
+# Max num of threads can concurrently execute qp sub-tasks of all client requests.
+# When <= 0, use CPU core number * 10.
+# Each client request corresponds to a QP Task.
+# A QP task may be divided into several sub-tasks.
+concurrent_qp_sub_task_thread = 0
 
-# How many thread can concurrently apply raft task. When <= 0, use CPU core number.
-concurrent_raft_task_thread=0
+# Max num of threads can concurrently apply tasks in raft state machine.
+# When <= 0, use CPU core number.
+# Raft Task refers to tasks that need to be performed in the state machine.
+concurrent_raft_task_thread = 0
+
+# Max time of blocking main thread for waiting for all running task threads and tasks in the
+# queue until end. The unit is milliseconds.
+# Each client request corresponds to a QP Task. A QP task may be divided into several sub-tasks.
+close_qp_sub_task_block_timeout = 1000
+
+# Max time of blocking main thread for waiting for all running task threads and tasks in the
+# queue until end. The unit is milliseconds.
+# Raft Task refers to tasks that need to be performed in the state machine.
+# Due to guarantee data consistency, it must ensure that raft tasks finish.
+# If user sets the parameter, it will not sure to guarantee consistency.
+close_raft_task_block_timeout = 0
