remove useless file and add process bar

--- a/iotdb-cli/pom.xml
+++ b/iotdb-cli/pom.xml
@@ -54,6 +54,11 @@
             <version>3.1</version>
         </dependency>
         <dependency>
+            <groupId>me.tongfei</groupId>
+            <artifactId>progressbar</artifactId>
+            <version>0.7.3</version>
+        </dependency>
+        <dependency>
             <groupId>jline</groupId>
             <artifactId>jline</artifactId>
             <version>${jline.version}</version>
